<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="5dp"
    android:background="@color/backgroundcolor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_main_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:background="@color/primary_keys"
        android:text="@string/btn_main_saveinformation"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true" />
    <TextView
        android:id="@+id/txt_main_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="20dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="4dp"
        android:text="@string/txt_main_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_main_save"
        android:layout_below="@id/txt_main_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_main_profilepic"
                android:layout_width="168dp"
                android:layout_height="174dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/txt_main_constraintpic"
                android:src="@drawable/profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_main_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txt_main_sfullname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_main_profilepic" />

            <Button
                android:id="@+id/btn_main_viewwebsite"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/secondry_key"
                android:text="@string/btn_main_viewwebsite"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_main_edit_profile"
                app:layout_constraintTop_toBottomOf="@+id/txt_main_name" />

            <Button
                android:id="@+id/btn_main_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:background="@color/primary_keys"
                android:text="@string/btn_main_editprofile"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/btn_main_viewwebsite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_main_viewwebsite"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txt_main_skilltitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/txt_main_skilltitle"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_main_edit_profile" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:text="@string/txt_main_checkbox1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_main_skilltitle" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="98dp"
                android:layout_height="35dp"
                android:text="@string/txt_main_checkbox2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/txt_main_checkbox3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

            <TextView
                android:id="@+id/txt_main_citytittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_main_citytitle"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/radiogroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3"

                />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="143dp"
                android:layout_height="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/imagetest"
                app:layout_constraintTop_toBottomOf="@+id/txt_main_citytittle"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/radio_main_btn1"
                    android:layout_width="match_parent"
                    android:layout_height="20sp"
                    android:text="@string/radio_main_radiobtn1"
                    android:layout_marginTop="10dp"/>

                <RadioButton
                    android:id="@+id/radio_main_btn2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/radio_main_radiobtn2"
                    android:layout_marginTop="10dp"/>

                <RadioButton
                    android:id="@+id/radio_main_btn3"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/radio_main_radiobtn3"
                    android:layout_marginTop="10dp"/>
            </RadioGroup>

            <ImageView
                android:id="@+id/imagetest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_pic"
                app:layout_constraintTop_toBottomOf="@id/radiogroup"
                tools:layout_editor_absoluteX="0dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>